--- a/yourSite/service2.html
+++ b/yourSite/service2.html
@@ -14,6 +14,9 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/additional-methods.min.js"></script> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
     <script src="script.js"></script>
   </head>
 
@@ -99,6 +102,43 @@
     </ol>
   </div>
 
+  <div class="faq w3-row-padding w3-padding-64">
+    <h2 class="w3-center">RECAP</h2>
+    <div class="accordion service-tabs">
+        <p class="question">5 IMPORTANT THINGS TO KEEP IN MIND IN THE DD PHASE:</p>
+        <p class="answer">In every phase of the project, there are specific things that we need to keep in mind. The design development phase focuses heavily on the coordination and developing details and materiality for the project.<br>
+          - COORDINATE WITH YOUR CLIENT AND FIRM<br>
+          Coordinating within your design firm and with your consultants will ensure a smooth design development process. Coordinate early and often! Develop a system both internally and externally for efficient and effective coordination among architects and other disciplines.<br>
+          - PROPERLY DELEGATE TO YOUR TEAM<br>
+          Don’t try to solve every problem and complete every drawing yourself. Delegate designs and work within your firm and to your consultants. Appropriately delegating the many actions necessary during design development will make the process more efficient and more manageable for the entire team.<br>
+          - FOCUS ON THE DETAILS<br>
+          Make sure to detail your design ideas through drawing and specifications. This is your first opportunity to convey to the owner and/ or stakeholders a cohesive, developed design idea. Detail your idea in plan and section, at many scales.<br>
+          - EMBRACE REVISIONS<br>
+          Continue to coordinate both internally with your team and externally with your consultants and owners/ stakeholders throughout the design services. As you progress, changes are bound to happen. Don’t resist change – embrace it. But make sure to coordinate these changes with the entire design team so that all of the drawings and documents communicate the same intent.<br>
+          - DOUBLE AND TRIPLE CHECK<br>
+          Before delivering the final design development documents, double and triple-check. Check for consistency in dimensioning, annotations, tags, callouts, acronyms, and symbols. Develop a system of checks and balances, and share this system with consultants to ensure effective checking across the disciplines. Practicing this early and consistently will make the rest of the project design and construction process easier for you and your team.</p>
+        <p class="question">WHAT IS INCLUDED IN DESIGN DEVELOPMENT DOCUMENTS?</p>
+        <p class="answer">Design development documents include:<br>
+          Design Development documents typically includes a standard architectural drawing set: site plan, floor plans, sections, elevations, and details.<br>
+          This drawing set also includes structural drawings, MEP (mechanical, electrical, and plumbing) drawings, civil engineering drawings, and landscape architecture drawings. Other consultants such as acoustics, fire protection, and envelope may provide drawings and documents as well.<br>
+          A draft project manual should accompany the design development drawing set. This project manual should include at minimum the outline specifications for the project. An expanded outline, or full draft of the full specifications set is even better. The more developed documentation provided at this phase of design, the more successful later phases tend to be.</p>
+        <p class="question">ALL THE DESIGN PHASES YOU SHOULD KNOW.</p>
+        <p class="answer">The 5 phases of an architectural design project are:<br>
+          - Schematic Design Phase<br>
+          - Design Development Phase<br>
+          - Construction Document Phase<br>
+          - Bidding Phase<br>
+          - Construction Administration Phase</p>
+    </div>
+    </div>
+
+    <div class="w3-container w3-padding-32 w3-theme-l1 w3-center">
+      <div class="fotorama" data-nav="thumbs" data-width="100%" data-height="100%">
+        <img src="images/service3-1.jpeg" data-caption="One example of Construction Drawing">
+        <img src="https://s.fotorama.io/2.jpg">
+      </div>
+      </div>
+
     <!-- Pricing Row -->
 <div class="w3-row-padding w3-center w3-padding-64" id="pricing">
   <h2>PRICING</h2>
@@ -151,41 +191,11 @@
   </div>
 </div>
 
-<div class="faq w3-row-padding w3-padding-64">
-  <h2 class="w3-center">RECAP</h2>
-  <div class="accordion service-tabs">
-      <p class="question">5 IMPORTANT THINGS TO KEEP IN MIND IN THE DD PHASE:</p>
-      <p class="answer">In every phase of the project, there are specific things that we need to keep in mind. The design development phase focuses heavily on the coordination and developing details and materiality for the project.<br>
-        - COORDINATE WITH YOUR CLIENT AND FIRM<br>
-        Coordinating within your design firm and with your consultants will ensure a smooth design development process. Coordinate early and often! Develop a system both internally and externally for efficient and effective coordination among architects and other disciplines.<br>
-        - PROPERLY DELEGATE TO YOUR TEAM<br>
-        Don’t try to solve every problem and complete every drawing yourself. Delegate designs and work within your firm and to your consultants. Appropriately delegating the many actions necessary during design development will make the process more efficient and more manageable for the entire team.<br>
-        - FOCUS ON THE DETAILS<br>
-        Make sure to detail your design ideas through drawing and specifications. This is your first opportunity to convey to the owner and/ or stakeholders a cohesive, developed design idea. Detail your idea in plan and section, at many scales.<br>
-        - EMBRACE REVISIONS<br>
-        Continue to coordinate both internally with your team and externally with your consultants and owners/ stakeholders throughout the design services. As you progress, changes are bound to happen. Don’t resist change – embrace it. But make sure to coordinate these changes with the entire design team so that all of the drawings and documents communicate the same intent.<br>
-        - DOUBLE AND TRIPLE CHECK<br>
-        Before delivering the final design development documents, double and triple-check. Check for consistency in dimensioning, annotations, tags, callouts, acronyms, and symbols. Develop a system of checks and balances, and share this system with consultants to ensure effective checking across the disciplines. Practicing this early and consistently will make the rest of the project design and construction process easier for you and your team.</p>
-      <p class="question">WHAT IS INCLUDED IN DESIGN DEVELOPMENT DOCUMENTS?</p>
-      <p class="answer">Design development documents include:<br>
-        Design Development documents typically includes a standard architectural drawing set: site plan, floor plans, sections, elevations, and details.<br>
-        This drawing set also includes structural drawings, MEP (mechanical, electrical, and plumbing) drawings, civil engineering drawings, and landscape architecture drawings. Other consultants such as acoustics, fire protection, and envelope may provide drawings and documents as well.<br>
-        A draft project manual should accompany the design development drawing set. This project manual should include at minimum the outline specifications for the project. An expanded outline, or full draft of the full specifications set is even better. The more developed documentation provided at this phase of design, the more successful later phases tend to be.</p>
-      <p class="question">ALL THE DESIGN PHASES YOU SHOULD KNOW.</p>
-      <p class="answer">The 5 phases of an architectural design project are:<br>
-        - Schematic Design Phase<br>
-        - Design Development Phase<br>
-        - Construction Document Phase<br>
-        - Bidding Phase<br>
-        - Construction Administration Phase</p>
-  </div>
-  </div>
-
   <div class="w3-center">
     <!-- Pagination -->
     <div class="w3-center w3-padding-32 w3-theme-l5">
       <div class="w3-bar">
-        <a href="#" class="w3-bar-item w3-button w3-hover-theme">«</a>
+        <a href="service1.html" class="w3-bar-item w3-button w3-hover-theme">«</a>
         <a href="service1.html" class="w3-bar-item w3-button w3-hover-theme">1</a>
         <a href="#" class="w3-bar-item w3-button w3-theme w3-hover-theme">2</a>
         <a href="service3.html" class="w3-bar-item w3-button w3-hover-theme">3</a>
