--- a/yourSite/service3.html
+++ b/yourSite/service3.html
@@ -14,6 +14,9 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/additional-methods.min.js"></script> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
     <script src="script.js"></script>
   </head>
 
@@ -79,25 +82,51 @@
     <p>While both construction document sets need to be very detailed, it is common practice for the permit set to be delivered prior to the construction set. In so doing, any issues that arise during permitting can be addressed and corrected in the construction set. In order for a completed building to receive its final certificate of occupancy from the local authority having jurisdiction, the building must closely match the construction documents submitted in the permit set. <p>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS THE PURPOSE OF CONSTRUCTION DOCUMENTS?</h3>
     <p>The purpose of construction documents is to get the design built. These are contract binding documents which describe precisely how the design shall be built: methods, materials, building systems, components. The construction documents describe precisely, in both large and small scales, every facet of the building design. Good construction documents provide the Contractor the most comprehensive understanding of the Architect’s intent.</p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">6 ELEMENTS OF DESIGN DEVELOPMENT:</h3>
-    <p>During design development, we will use all 6 of these elements not only as deliverables but as tools to explore our building design. Usually, clients will also use these deliverables to get preliminary pricing on the project.</p>
-    <ol>
-      <li>PLANS</li>
-      <p>Floor plans and reflected ceiling plans of all levels should be more or less complete for this deliverable. The plans should be graphically complete except for minor coordination: rooms should be labeled and numbered, doors should be tagged, and detailing initiated.</p>
-      <p>Enlarged plans should be provided for unique programmatic areas in the project such as lobbies, restrooms, auditoriums, typical residential units, classrooms etc.</p>
-      <li>SECTIONS</li>
-      <p>The design development set should contain a series of section drawings, including building sections, wall sections, and detail sections. These should be drawn and detailed appropriate to scale.</p>
-      <p>The sections and section details should depict clearances, infrastructure, adjacent context, and other references that are helpful to understand the design and programmatic intent.</p>
-      <li>ELEVATIONS</li>
-      <p>All building elevations should be included in the design development set. Enlarged building elevations for unique façade conditions should be included with dimensions and material designations at typical conditions. The elevations should include the location of all openings including doors and windows, both fixed and operable.</p>
-      <li>MATERIALS</li>
-      <p>While the finish schedule does not need to be complete, there should be an understanding of the basic materials for all elements of the architecture, including structure, envelope, and interior. Materials should be annotated in the drawings, and coordinated graphically among drawings. The draft finish schedule should be included, indicating the floor, wall, and ceiling finishes.</p>
-      <li>COORDINATION</li>
-      <p>Coordination between disciplines should be well underway during design development. There will need to be a great deal of coordination between structure, landscape, MEP, and architect in order to deliver a full design development drawing set. Each discipline will need to provide a drawing set to the architect including plans, sections, diagrams, details, and reference sheets.</p>
-      <li>SPECIFICATIONS</li>
-      <p>While a complete project manual of full specification sections isn’t necessary for this phase of the design process, there should at minimum be an outline specification document. Even better, a more developed draft of full-length sections for structure and envelope (Divisions 3 through 8). Developed specifications at this phase of the design process help ensure the success of construction documents, bidding, and construction administration in the future.</p>
-    </ol>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">CONSTRUCTION DRAWING TYPICALLY INCLUDE:</h3>
+    <ul>
+      <li>General Sheets: </li>
+      <p>These are the beginning of the construction documents set. The general drawings include the cover page, building and zoning code analysis, life safety plans, and accessibility and sustainability standards if required.</p>
+      <li>Civil Engineering Sheets:</li>
+      <p>These drawings include the Civil Engineer’s notes, the grading and utilities plans, and other details.</p>
+      <li>Landscape Architecture Sheets: </li>
+      <p>These drawings are submitted by the licensed Landscape Architect. The landscape architecture drawings include plans, sections, and details, in order to effectively communicate to the Contractor and Subcontractors how to construct the various landscape elements. There is usually coordination required between the Civil Engineer and Landscape Architect. </p>
+      <li>Structural Sheets:</li>
+      <p>The licensed Structural Engineer’s drawings provide structural plans, calculations, and details - from an entire level’s beam system, to the detailed connection between structural elements. Detailed drawings and calculations for each type of structural system in the project are required. </p>
+      <li>Architectural Sheets: </li>
+      <p>The architectural drawings graphically communicate (in plan, section, elevation, and details) the architectural components of the building design. Architects are most familiar with these drawing types, but there are similarities in drawing types among all disciplines. </p>
+      <li>Plumbing Sheets: </li>
+      <p>The plumbing drawings will show the locations and sizes of all inbound and outbound water supply. A plan for each level shows every pipe, faucet, and drain. Diagrams, details, and schedules also communicate how these components work together to provide a functional plumbing system in a building.</p>
+      <li>Mechanical Sheets: </li>
+      <p>The mechanical engineer’s drawings will show the locations and sizes of all mechanical equipment in an architectural design. This includes the size and layout of all exposed or concealed ductwork, as well as the location of each vent, heating unit, cooling unit, and thermostat. </p>
+      <li>Electrical Sheets: </li>
+      <p>These drawings will show the locations of all power outlets, sources, light fixtures, and switches. As we see growing trends towards energy efficiency after occupancy in buildings, the electrical drawings may also account for energy and sustainability compliance. Typically, lighting plans and power & voltage plans are provided for each level of the building, as well as a sheet devoted to power calculations.
+      </p>
+    </ul>
   </div>
+
+  <div class="faq w3-row-padding w3-padding-64">
+    <h2 class="w3-center">RECAP</h2>
+    <div class="accordion service-tabs">
+        <p class="question">WHAT ORDER DO CONSTRUCTION DRAWINGS GO IN?</p>
+        <p class="answer">Construction document drawings follow a standard order. Typically, construction drawings follow the United States National CAD Standard. In this standard, the lower right hand corner of each drawing sheet contains a series of letters and numbers (the sheet number). The sheet number lets the reader know where they are in the drawing set, and allows the reader to know where to look in the drawing set for specific information. </p>
+        <p class="question">WHAT IS INCLUDED IN CONSTRUCTION DOCUMENTS?</p>
+        <p class="answer">There are two things included in Construction Documents: Drawings and Specifications. All Construction Documents follow this standard, which helps the reader to know where to look among the hundreds of pages of architectural drawings and specifications. Each affiliated building practice provides both types of construction documents: Architecture, Structural, Mechanical, Electrical, Plumbing, Landscape Architecture, and Civil.</p>
+        <p class="question">ALL THE DESIGN PHASES YOU SHOULD KNOW.</p>
+        <p class="answer">The 5 phases of an architectural design project are:<br>
+          - Schematic Design Phase<br>
+          - Design Development Phase<br>
+          - Construction Document Phase<br>
+          - Bidding Phase<br>
+          - Construction Administration Phase</p>
+    </div>
+    </div>
+
+    <div class="w3-container w3-padding-32 w3-theme-l1 w3-center">
+    <div class="fotorama" data-nav="thumbs" data-width="100%" data-height="100%">
+      <img src="images/construction1.jpeg" data-caption="One example of Construction Drawing">
+      <img src="https://s.fotorama.io/2.jpg">
+    </div>
+    </div>
 
 <!-- Pricing Row -->
 <div class="w3-row-padding w3-center w3-padding-64" id="pricing">
@@ -151,41 +180,11 @@
   </div>
 </div>
 
-<div class="faq w3-row-padding w3-padding-64">
-  <h2 class="w3-center">RECAP</h2>
-  <div class="accordion service-tabs">
-      <p class="question">5 IMPORTANT THINGS TO KEEP IN MIND IN THE DD PHASE:</p>
-      <p class="answer">In every phase of the project, there are specific things that we need to keep in mind. The design development phase focuses heavily on the coordination and developing details and materiality for the project.<br>
-        - COORDINATE WITH YOUR CLIENT AND FIRM<br>
-        Coordinating within your design firm and with your consultants will ensure a smooth design development process. Coordinate early and often! Develop a system both internally and externally for efficient and effective coordination among architects and other disciplines.<br>
-        - PROPERLY DELEGATE TO YOUR TEAM<br>
-        Don’t try to solve every problem and complete every drawing yourself. Delegate designs and work within your firm and to your consultants. Appropriately delegating the many actions necessary during design development will make the process more efficient and more manageable for the entire team.<br>
-        - FOCUS ON THE DETAILS<br>
-        Make sure to detail your design ideas through drawing and specifications. This is your first opportunity to convey to the owner and/ or stakeholders a cohesive, developed design idea. Detail your idea in plan and section, at many scales.<br>
-        - EMBRACE REVISIONS<br>
-        Continue to coordinate both internally with your team and externally with your consultants and owners/ stakeholders throughout the design services. As you progress, changes are bound to happen. Don’t resist change – embrace it. But make sure to coordinate these changes with the entire design team so that all of the drawings and documents communicate the same intent.<br>
-        - DOUBLE AND TRIPLE CHECK<br>
-        Before delivering the final design development documents, double and triple-check. Check for consistency in dimensioning, annotations, tags, callouts, acronyms, and symbols. Develop a system of checks and balances, and share this system with consultants to ensure effective checking across the disciplines. Practicing this early and consistently will make the rest of the project design and construction process easier for you and your team.</p>
-      <p class="question">WHAT IS INCLUDED IN DESIGN DEVELOPMENT DOCUMENTS?</p>
-      <p class="answer">Design development documents include:<br>
-        Design Development documents typically includes a standard architectural drawing set: site plan, floor plans, sections, elevations, and details.<br>
-        This drawing set also includes structural drawings, MEP (mechanical, electrical, and plumbing) drawings, civil engineering drawings, and landscape architecture drawings. Other consultants such as acoustics, fire protection, and envelope may provide drawings and documents as well.<br>
-        A draft project manual should accompany the design development drawing set. This project manual should include at minimum the outline specifications for the project. An expanded outline, or full draft of the full specifications set is even better. The more developed documentation provided at this phase of design, the more successful later phases tend to be.</p>
-      <p class="question">ALL THE DESIGN PHASES YOU SHOULD KNOW.</p>
-      <p class="answer">The 5 phases of an architectural design project are:<br>
-        - Schematic Design Phase<br>
-        - Design Development Phase<br>
-        - Construction Document Phase<br>
-        - Bidding Phase<br>
-        - Construction Administration Phase</p>
-  </div>
-  </div>
-
   <div class="w3-center">
     <!-- Pagination -->
     <div class="w3-center w3-padding-32 w3-theme-l5">
       <div class="w3-bar">
-        <a href="#" class="w3-bar-item w3-button w3-hover-theme">«</a>
+        <a href="service1.html" class="w3-bar-item w3-button w3-hover-theme">«</a>
         <a href="service1.html" class="w3-bar-item w3-button w3-hover-theme">1</a>
         <a href="service2.html" class="w3-bar-item w3-button w3-hover-theme">2</a>
         <a href="#" class="w3-bar-item w3-button w3-theme w3-hover-theme">3</a>
