--- a/yourSite/service5.html
+++ b/yourSite/service5.html
@@ -31,11 +31,11 @@
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button dropdown-button current-page" title="Notifications"><a href="#service" class="drop-down">Service</a><i class="fa fa-caret-down"></i></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-      <a href="service1.html" class="w3-bar-item w3-button current-page">Schematic Design</a>
+      <a href="service1.html" class="w3-bar-item w3-button">Schematic Design</a>
       <a href="service2.html" class="w3-bar-item w3-button">Design Development</a>
       <a href="service3.html" class="w3-bar-item w3-button">Construction Documents</a>
       <a href="service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
-      <a href="service5.html" class="w3-bar-item w3-button">Contract Administration</a>
+      <a href="service5.html" class="w3-bar-item w3-button current-page">Contract Administration</a>
     </div>
   </div>
   <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
@@ -68,50 +68,49 @@
 <!-- Image Header -->
 <div class="hero-service w3-display-container">
   <div class="hero-content w3-display-bottomleft">  
-    <h1>WHAT IS SCHEMATIC DESIGN PHASE?</h1>
-    <h2>This is a comprehensive guide on the schematic design phase - the first phase of an architectural project. We’ll explore what it is, who’s involved, what’s included and examples of schematic design drawings.</h1>
+    <h1>WHAT IS CONSTRUCTION DOCUMENTS PHASE?</h1>
+    <h2>Construction documents serve as a contract between the Architect, the Contractor, and the Owner. In construction documents, all the building practices coordinate to turn the big design ideas presented to the Owner into something buildable and safe to inhabit.</h1>
   </div>
 </div>
 
   <!-- Content Section -->
   <div class="w3-container w3-padding-32 about-special">
-    <p>As architects, we rely on multiple design phases in our projects to ensure a smooth schedule and workflow for everyone on the project team. The Schematic Design phase is the first phase of the architectural design project schedule. Good programming and planning lay the groundwork for a successful design process, and ultimately a successful construction project.</p>
-    <p>Schematic design is one of our favorite phases because it could be a lot of fun, especially if your design team practices good planning and project management moving forward. While the end goal of the architectural design process is a built and occupied structure, these first efforts during the schematic design phase are imperative for success and efficiency in the rest of the project scope.</p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS SCHEMATIC DESIGN?</h3>
-    <p>Schematic Design is the first phase of the architectural design process. At this stage, your design team begins to describe the architectural and tectonic elements of the project design.</p>
-    <p>The team takes the programming and concept design, and translates it  into architectural and spatial designs. Most of us explore many ideas in this phase in order to achieve the best possible design solutions.<p>
-    <p>Two important components for a successful schematic design phase are site analysis and programming. Both the building program and location have significant implications in the design process, so it’s important to have a solid understanding of these foundational components at this stage.</p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHO'S INVOLVED IN SCHEMATIC DESIGN?</h3>
-    <p>This phase begins shortly after the project is started. While all team members and stakeholders can be involved in the schematic design process, it is more likely that the project Owner and Architect will be the most involved in this phase.</p>
-    <p>During this phase, you and the client work closely, to make sure all the necessary building program needs are covered in the project design. In fact, your client may be more involved in the day-to-day workings of the Schematic Design stage than any other design stage hereafter.<p>   
-    <p>Your architecture team will use tools like schematic diagrams and sketching to quickly convey spatial ideas to the client. These tools allow iterations and prevent any team member from settling on an idea prematurely.</p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT COMES AFTER SCHEMATIC DESIGN?</h3>
-    <p>By the end of schematic design, your architecture team should have a fundamental understanding of the scale and the systems of the project. There should be clarity about the various consultants and engineers that will be needed in order to proceed to the design development phase.</p>
-    <p>After the SD phase, the project will move into design development, and then into the construction document phase. The schedule and the budget of a project will determine the scope of each phase of the design.</p>
-    <p>During the next design phase, you and your team will flesh out the schematic design ideas even more, in order to more fully understand how the various systems and elements of the building design are integrated into the ultimate construction project. </p>
-    <p>As architects, it is common for multiple ideas and design concepts to be explored and developed during the schematic design phase. Ultimately, only one is chosen, but it’s important not to settle on any particular option too quickly in this stage, in order to make room for creative solutions and approaches. </p>
-    <p>But, if you do decide to explore multiple design options in schematic design, it’s necessary to choose one before moving forward into the design development phase. So everyone is on the same page when your team develops the design further.</p>
+    <p>Construction documents may not seem like the most glamorous part of architectural design. All the ‘fun’ stuff - the model making, sketching, conceptual conversations and wild iterations - happens earlier in schematic design. Even the term ‘construction documents’ sounds boring.</p>
+    <p>But, construction documents (CDs) are an important part of the architectural process, and provide their own unique opportunities for the designer. Construction documents are directions from the Architect to the Contractor. These documents describe precisely how the Contractor will make the Architect’s design become a built object - through drawings and specifications. <p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS CONSTRUCTION DOCUMENTATION?</h3>
+    <p>Here, all the details come together, and construction documents serve two basic purposes: to obtain a building permit, and to get the design built. These may be delivered in two types of construction documents - a permit set and a construction set. </p>
+    <p>While both construction document sets need to be very detailed, it is common practice for the permit set to be delivered prior to the construction set. In so doing, any issues that arise during permitting can be addressed and corrected in the construction set. In order for a completed building to receive its final certificate of occupancy from the local authority having jurisdiction, the building must closely match the construction documents submitted in the permit set. <p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS THE PURPOSE OF CONSTRUCTION DOCUMENTS?</h3>
+    <p>The purpose of construction documents is to get the design built. These are contract binding documents which describe precisely how the design shall be built: methods, materials, building systems, components. The construction documents describe precisely, in both large and small scales, every facet of the building design. Good construction documents provide the Contractor the most comprehensive understanding of the Architect’s intent.</p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">CONSTRUCTION DRAWING TYPICALLY INCLUDE:</h3>
+    <ul>
+      <li>General Sheets: </li>
+      <p>These are the beginning of the construction documents set. The general drawings include the cover page, building and zoning code analysis, life safety plans, and accessibility and sustainability standards if required.</p>
+      <li>Civil Engineering Sheets:</li>
+      <p>These drawings include the Civil Engineer’s notes, the grading and utilities plans, and other details.</p>
+      <li>Landscape Architecture Sheets: </li>
+      <p>These drawings are submitted by the licensed Landscape Architect. The landscape architecture drawings include plans, sections, and details, in order to effectively communicate to the Contractor and Subcontractors how to construct the various landscape elements. There is usually coordination required between the Civil Engineer and Landscape Architect. </p>
+      <li>Structural Sheets:</li>
+      <p>The licensed Structural Engineer’s drawings provide structural plans, calculations, and details - from an entire level’s beam system, to the detailed connection between structural elements. Detailed drawings and calculations for each type of structural system in the project are required. </p>
+      <li>Architectural Sheets: </li>
+      <p>The architectural drawings graphically communicate (in plan, section, elevation, and details) the architectural components of the building design. Architects are most familiar with these drawing types, but there are similarities in drawing types among all disciplines. </p>
+      <li>Plumbing Sheets: </li>
+      <p>The plumbing drawings will show the locations and sizes of all inbound and outbound water supply. A plan for each level shows every pipe, faucet, and drain. Diagrams, details, and schedules also communicate how these components work together to provide a functional plumbing system in a building.</p>
+      <li>Mechanical Sheets: </li>
+      <p>The mechanical engineer’s drawings will show the locations and sizes of all mechanical equipment in an architectural design. This includes the size and layout of all exposed or concealed ductwork, as well as the location of each vent, heating unit, cooling unit, and thermostat. </p>
+      <li>Electrical Sheets: </li>
+      <p>These drawings will show the locations of all power outlets, sources, light fixtures, and switches. As we see growing trends towards energy efficiency after occupancy in buildings, the electrical drawings may also account for energy and sustainability compliance. Typically, lighting plans and power & voltage plans are provided for each level of the building, as well as a sheet devoted to power calculations.
+      </p>
+    </ul>
   </div>
 
   <div class="faq w3-row-padding w3-padding-64">
     <h2 class="w3-center">RECAP</h2>
     <div class="accordion service-tabs">
-        <p class="question">WHAT IS THE DIFFERENCE BETWEEN CONCEPT DESIGN AND SCHEMATIC DESIGN?</p>
-        <p class="answer">The difference between concept design and schematic design lies in the level of resolution. Concept design can be abstract, while schematic design begins to articulate spatial and architectural elements in a way that isn’t necessary for concept design.<br>
-          Your goal in schematic design should be to settle on an overall concept for the project and produce a framework through which to move forward into design development, and eventually construction. <br>
-          Concept design can be loose and diagrammatic. There is no need to address issues of scale or constructability during this process. But standard conventions of architectural drawing (plan, section, elevation) should be used in the schematic design phase to articulate space and scale.</p>
-        <p class="question">WHAT IS INCLUDED IN SCHEMATIC DESIGN DOCUMENTS?</p>
-        <p class="answer">Schematic design documents include:<br>
-          - Project summary and narrative<br>
-          - Site and code analysis<br>
-          - Existing and proposed site plans<br>
-          - Floor plans for every level<br>
-          - Multiple building sections<br>
-          - Building elevations<br>
-          - Structural schematic drawings or narrative<br>
-          - Mechanical schematic drawings or narrative<br>
-          - Plumbing schematic drawings or narrative<br>
-          - Electrical schematic drawings or narrative</p>
+        <p class="question">WHAT ORDER DO CONSTRUCTION DRAWINGS GO IN?</p>
+        <p class="answer">Construction document drawings follow a standard order. Typically, construction drawings follow the United States National CAD Standard. In this standard, the lower right hand corner of each drawing sheet contains a series of letters and numbers (the sheet number). The sheet number lets the reader know where they are in the drawing set, and allows the reader to know where to look in the drawing set for specific information. </p>
+        <p class="question">WHAT IS INCLUDED IN CONSTRUCTION DOCUMENTS?</p>
+        <p class="answer">There are two things included in Construction Documents: Drawings and Specifications. All Construction Documents follow this standard, which helps the reader to know where to look among the hundreds of pages of architectural drawings and specifications. Each affiliated building practice provides both types of construction documents: Architecture, Structural, Mechanical, Electrical, Plumbing, Landscape Architecture, and Civil.</p>
         <p class="question">ALL THE DESIGN PHASES YOU SHOULD KNOW.</p>
         <p class="answer">The 5 phases of an architectural design project are:<br>
           - Schematic Design Phase<br>
@@ -121,21 +120,21 @@
           - Construction Administration Phase</p>
     </div>
     </div>
-  
-  <div class="w3-container w3-padding-32 w3-theme-l1 w3-center">
+
+    <div class="w3-container w3-padding-32 w3-theme-l1 w3-center">
     <div class="fotorama" data-nav="thumbs" data-width="100%" data-height="100%">
       <img src="images/service3-1.jpeg" data-caption="One example of Construction Drawing">
       <img src="https://s.fotorama.io/2.jpg">
     </div>
     </div>
 
-    <!-- Pricing Row -->
+<!-- Pricing Row -->
 <div class="w3-row-padding w3-center w3-padding-64" id="pricing">
   <h2>PRICING</h2>
   <p>Carefully look at the pricing plan before starting an architecture phase.</p><br>
   <div class="w3-third w3-margin-bottom">
     <ul class="w3-ul w3-border w3-hover-shadow">
-      <li class="w3-theme-l2">
+      <li class="w3-theme">
         <p class="w3-large">Schematic<br> Design</p>
       </li>
       <li class="w3-padding-16"><b>15%</b> of Architectural Fees</li>
@@ -173,7 +172,7 @@
 
   <div class="w3-third w3-margin-bottom">
     <ul class="w3-ul w3-border w3-hover-shadow">
-      <li class="w3-theme">
+      <li class="w3-theme-l2">
         <p class="w3-large">Construction<br> Administration</p>
       </li>
       <li class="w3-padding-16"><b>20%</b> of Architectural Fees</li>
@@ -181,18 +180,17 @@
   </div>
 </div>
 
-
   <div class="w3-center">
     <!-- Pagination -->
     <div class="w3-center w3-padding-32 w3-theme-l5">
       <div class="w3-bar">
-        <a href="#" class="w3-bar-item w3-button w3-hover-theme">«</a>
-        <a href="#" class="w3-bar-item w3-button w3-theme w3-hover-theme">1</a>
+        <a href="service1.html" class="w3-bar-item w3-button w3-hover-theme">«</a>
+        <a href="service1.html" class="w3-bar-item w3-button w3-hover-theme">1</a>
         <a href="service2.html" class="w3-bar-item w3-button w3-hover-theme">2</a>
         <a href="service3.html" class="w3-bar-item w3-button w3-hover-theme">3</a>
         <a href="service4.html" class="w3-bar-item w3-button w3-hover-theme">4</a>
-        <a href="service5.html" class="w3-bar-item w3-button w3-hover-theme">5</a>
-        <a href="service5.html" class="w3-bar-item w3-button w3-hover-theme">»</a>
+        <a href="#" class="w3-bar-item w3-button w3-theme w3-hover-theme">5</a>
+        <a href="#" class="w3-bar-item w3-button w3-hover-theme">»</a>
       </div>
     </div>
   </div>
